# rspace

./: .gitignore  Cargo.toml  build.rs
benches/: benchmark_emul32_rom.rs  benchmark_mem.rs
fuzz/: .gitignore  Cargo.toml
fuzz-afl/: Cargo.toml
fuzz-afl/fuzz_targets/: crash.rs
fuzz/fuzz_targets/: fuzzer_emul32_rom.rs
m6809/: .gitattributes  Cargo.toml
m6809/src/: lib.rs
m6809/src/asm/: assembler.rs  ast.rs  labeler.rs  lexer.rs  mod.rs  parser.rs
m6809/src/emu/: cpu.rs  mod.rs  regfile.rs
m6809/test_asm/: branch.asm  direct_bit.asm  direct_mem.asm  imm8.asm  imm_mem.asm  indexed.asm  inherent.asm  logical_mem.asm
rcore/: Cargo.toml
rcore/src/: arena.rs  attach.rs  class.rs  collision.rs  debug_weapon.rs  health.rs  lib.rs  main.rs  math.rs  movement.rs  radar.rs  rotation.rs  script.rs  ship.rs  spawner.rs  time.rs  weapon.rs
rcore/src/render/: arena.rs  camera.rs  gizmo.rs  mod.rs  shape.rs
rcore/src/ship/: class.rs  collision.rs  debug_weapon.rs  health.rs  mod.rs  movement.rs  radar.rs  rotation.rs
rcore/src/ship/motion/: mod.rs  movement.rs  rotation.rs
riscv/: Cargo.toml  build.rs
riscv/benches/: benchmark_emul32_rom.rs  benchmark_mem.rs
riscv/fuzz/: Cargo.toml
riscv/fuzz-afl/: .gitignore  Cargo.toml
riscv/fuzz-afl/fuzz_targets/: afl-fuzz-emul32-rom.rs  crash.rs
riscv/fuzz/fuzz_targets/: fuzzer_emul32_rom.rs
riscv/src/: lib.rs
riscv/src/asm/: assembler.rs  ast.rs  cleaner.rs  labeler.rs  lexer.rs  mod.rs  parser.rs
riscv/src/sim/: mod.rs
riscv/src/vm/: cpu.rs  csr.rs  mem_util.rs  mod.rs  opcode.rs  regfile.rs  test.rs
riscv/src/vm/mio/: mod.rs  timer.rs
riscv/test-rv32im/: add.rs  addi.rs  and.rs  andi.rs  beq.rs  blt.rs  bltu.rs  div.rs  lb.rs  lhu.rs  lui.rs  lw.rs  or.rs  sb.rs  sh.rs  sll.rs  slli.rs  slt.rs  srai.rs  srl.rs  srli.rs  xor.rs
src/: asm.rs  lib.rs  main.rs  mem.rs  opcode.rs  parse.lalrpop  regfile.rs  types.rs  vm.rs  vm_test.rs  wall.rs
src/asm/: assembler.rs  ast.rs  cleaner.rs  labeler.rs  lexer.rs  mod.rs  parse.lalrpop  parse.rs  parser.rs  validator.rs
src/vm/: cpu.rs  csr.rs  mem.rs  mem_map.rs  mod.rs  opcode.rs  test.rs
src/vm/mem/: mod.rs  ram.rs  rom.rs  slice.rs
src/vm/mio/: timer.rs
test-rv32im/: add.rs  addi.rs  and.rs  andi.rs  beq.rs  bge.rs  bgeu.rs  bne.rs  div.rs  divu.rs  lbu.rs  lh.rs  mul.rs  mulh.rs  mulhsu.rs  mulhu.rs  or.rs  ori.rs  rem.rs  remu.rs  sll.rs  slli.rs  slt.rs  slti.rs  sltiu.rs  sltu.rs  sra.rs  srai.rs  srl.rs  srli.rs  sub.rs  sw.rs  xor.rs  xori.rs
