[package]
name = "rspace"
version = "0.1.0"
authors = ["Anja Berens <pharaun666@gmail.com>"]
edition = "2018"

# phf_codegen
build = "build.rs"

[features]
debug = []

[dev-dependencies]
criterion = "0.3"

[build-dependencies]
phf_codegen = "0.7.24"

[dependencies]
# Bit twiddling
twiddle = "1.1.0"

# Reading bits from memory
byteorder = "1.3.2"

# phf runtime library:
phf = "0.7.24"

# Graphics
vulkano = "0.14.0"
vulkano-shaders = "0.14.0"
vulkano-win = "0.15.0"
winit = "0.20.0-alpha4"

rand = "0.7.2"

nalgebra-glm = "0.3"
nalgebra = "0.17.3"


[lib]
bench = false

[[bin]]
name = "assembler"
path = "src/bin/assembler.rs"
bench = false

[[bin]]
name = "emulator"
path = "src/bin/emulator.rs"
bench = false

[[bin]]
name = "graphics"
path = "src/bin/graphics.rs"
bench = false

[[bench]]
name = "benchmark_emul32_rom"
harness = false

[[bench]]
name = "benchmark_mem"
harness = false
