[package]
name = "m6809"
version = "0.1.0"
authors = ["Anja Berens <pharaun666@gmail.com>"]
edition = "2024"

[lints]
workspace = true

[dependencies]
# Bit twiddling
twiddle = "1.1.0"
arbitrary-int = "2"
bitfield-struct = "0.13"

# Reading bits from memory
byteorder = "1.5"
bytemuck = { version = "1.25", features = ["derive", "must_cast"] }

# Parsing
nom = "8"
num-traits = "0.2"
