[package]
name = "rcore"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_prototype_lyon = "0.15"

# To permit ship dyn object to be cloned (so that they all have their own memory region for data)
dyn-clone = "1.0.20"

# FPS dialog
bevy_screen_diagnostics = { git = "https://github.com/GlennMacdonald/bevy_screen_diagnostics", branch = "0.17" }

[dependencies.avian2d]
version = "0.4"
default-features = false
features = [
	"2d",
	"f32",
	"parry-f32",
	"parallel",
	"debug-plugin",
]

[dependencies.bevy]
version = "0.17"
default-features = false
features = [
  # Bevy functionality:
  "multi_threaded",     # Run with multithreading
  "bevy_animation",     # Provides animation functionality
  "bevy_asset",         # Assets management
  "bevy_color",         # Provides shared color types and operations
  "bevy_core_pipeline", # Common rendering abstractions
  "bevy_gizmos",        # Support drawing debug lines and shapes
  "bevy_pbr",           # 3D (physically-based) rendering
  "bevy_render",        # Rendering framework core
  "bevy_scene",         # Scenes management
  "bevy_sprite",        # 2D (sprites) rendering
  "bevy_state",         # Enable built in global state machines
  "bevy_text",          # Text/font rendering
  "bevy_ui",            # UI toolkit
  "bevy_winit",         # Window management (cross-platform Winit backend)
  "bevy_window",        # Winit dep
  "animation",          # Animation support
  "default_font",       # Embed a minimal default font for text/UI

  # Bevy 0.16
  "std",
  "async_executor",

  "dynamic_linking"
]
