[package]
name = "rcore"
version = "0.1.0"
authors = ["Anja Berens <pharaun666@gmail.com>"]
edition = "2024"

[lints]
workspace = true

[features]
# To permit headless builds for testing core simulation logic
default = ["render"]

render = [
    # Ship rendering
    "dep:bevy_prototype_lyon",

    # Debug gizmos
    "avian2d/debug-plugin",

    # Bevy functionality:
    "bevy/bevy_animation",     # Provides animation functionality
    "bevy/bevy_asset",         # Assets management
    "bevy/bevy_color",         # Provides shared color types and operations
    "bevy/bevy_core_pipeline", # Common rendering abstractions
    "bevy/bevy_gizmos",        # Support drawing debug lines and shapes
    "bevy/bevy_gizmos_render", # Support rendering the gizmos
    "bevy/bevy_pbr",           # 3D (physically-based) rendering
    "bevy/bevy_render",        # Rendering framework core
    "bevy/bevy_scene",         # Scenes management
    "bevy/bevy_sprite",        # 2D (sprites) rendering
    "bevy/bevy_text",          # Text/font rendering
    "bevy/bevy_ui",            # UI toolkit
    "bevy/bevy_ui_render",     # UI GPU rendering (TransparentUi phase) — required by FpsOverlay
    "bevy/bevy_winit",         # Window management (cross-platform Winit backend)
    "bevy/bevy_window",        # Winit dep
    "bevy/default_font",       # Embed a minimal default font for text/UI

    "bevy/bevy_dev_tools",    # Fps
]

[dependencies]
# To permit ship dyn object to be cloned (so that they all have their own memory region for data)
dyn-clone = "1.0.20"

[dependencies.avian2d]
version = "0.7"
default-features = false
features = [
    "2d",
    "f32",
    "parry-f32",
    "parallel",
]

[dependencies.bevy_prototype_lyon]
version = "0.17"
optional = true

[dependencies.bevy]
version = "0.19"
default-features = false
features = [
    "bevy_state",         # Enable built in global state machines

    "std",
    "async_executor",
    "multi_threaded",     # Run with multithreading
    "dynamic_linking",    # Speed up dev compilation
    "debug"               # Retains ECS system/component names
]
